@@ -6,24 +6,26 @@ use strict;
 use warnings;
 use Module::Build;
 
-use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev$ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.2.%d', q$Rev$ =~ /\d+/gmx );
 
-my $requires = { 'perl'                        => '5.008',
-                 'version'                     => '0.74',
-                 'Cache::Memcached'            => '1.24',
-                 'Class::Accessor::Fast'       => '0.31',
-                 'Class::Inspector'            => '1.18',
-                 'Class::Null'                 => '1.09',
-                 'Data::Serializer'            => '0.46',
-                 'Date::Format'                => '2.22',
-                 'Exception::Class'            => '1.23',
-                 'IO::AtomicFile'              => '2.110',
-                 'IO::File'                    => '1.14',
-                 'IPC::SysV'                   => '1.04',
-                 'List::Util'                  => '1.19',
-                 'Readonly'                    => '1.03',
-                 'Time::Elapsed'               => '0.10',
-                 'Time::HiRes'                 => '1.9711' };
+my $requires = { 'perl'                  => '5.008',
+                 'version'               => '0.74',
+                 'Cache::Memcached'      => '1.24',
+                 'Class::Accessor::Fast' => '0.31',
+                 'Class::Inspector'      => '1.18',
+                 'Class::Null'           => '1.09',
+                 'Data::Serializer'      => '0.46',
+                 'Date::Format'          => '2.22',
+                 'Exception::Class'      => '1.23',
+                 'IO::AtomicFile'        => '2.110',
+                 'IO::File'              => '1.14',
+                 'IPC::SysV'             => '1.04',
+                 'IPC::ShareLite'        => '0.13',
+                 'List::Util'            => '1.19',
+                 'Readonly'              => '1.03',
+                 'Storable'              => '2.15',
+                 'Time::Elapsed'         => '0.10',
+                 'Time::HiRes'           => '1.9711' };
 my $build = Module::Build->new
    ( add_to_cleanup     => [ 'IPC-SRLock-*',
                              map { ( '*/' x $_ ) . '*~' } 0..5 ],
