@@ -11,7 +11,7 @@ use English    qw(-no_match_vars);
 use List::Util qw(first);
 use Readonly;
 
-use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev$ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.2.%d', q$Rev$ =~ /\d+/gmx );
 
 Readonly my $NUL => q();
 
@@ -79,7 +79,7 @@ IPC::SRLock::ExceptionClass - Exception base class
 
 =head1 Version
 
-0.1.$Revision$
+0.2.$Revision$
 
 =head1 Synopsis
 
